# blog26

./: .gitignore  commands.md  django_blog_v3-latest.sql  pyproject.toml  requirements.txt  sitemap.xml  todo_list.md
accounting/: urls.py  views.py
accounting/migrations/: 0007_alter_account_id_alter_category_id_alter_currency_id_and_more.py
blog/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py  views_api.py
blog/migrations/: 0001_initial.py  0002_alter_post_img_url_alter_post_summary.py  0003_replycomment_reply_to_name.py  0004_alter_post_content.py
blog/templatetags/: replace_html_tags.py
conf/: bob_uwsgi.ini
conf/nginx/sites-available/: default-latest
conf/startup/: rc.local
main/: urls.py  views.py
other/db_bak/: django_blog_v3-latest.sql  dump.txt
pb/: context_processors.py  settings.py  urls.py
static/blog/css/: blog.css  error.css
static/blog/js/: blog.js
static/main/css/: main.css
templates/accounting/: index.html
templates/blog/: base.html  blog_detail.html  blog_edit.html  blog_list.html  category.html  error.html  index.html  login.html  search_results.html
templates/main/: landing.html
